tests/baselines/reference/importNonExportedMember2.errors.txt
tests/cases/compiler/b.ts(1,10): error TS2459: Module '"./a"' declares 'Foo' locally, but it is not exported.


==== tests/cases/compiler/a.ts (0 errors) ====
    export {}
    interface Foo {}
    
==== tests/cases/compiler/b.ts (1 errors) ====
    import { Foo } from './a';
             ~~~
!!! error TS2459: Module '"./a"' declares 'Foo' locally, but it is not exported.
!!! related TS2728 tests/cases/compiler/a.ts:2:11: 'Foo' is declared here.
    